# pinboard-summarize

./: LICENSE  README.md  pinboard_summarize.py  pyproject.toml
contrib/qutebrowser/userscripts/: pin-summarize
